# data-quality-playground

./: 20220920-data-preparation.ipynb  20220929-great_expectations-simple_example.ipynb  LICENSE  README.md  pyproject.toml
data/: reference.csv  test.csv
great_expectations/: great_expectations.yml
great_expectations/checkpoints/: iris1.yml  iris3_.yml  iris3_2.yml  iris3_checkpoint.yml
great_expectations/expectations/: .ge_store_backend_id  iris-demo.json  iris2.json  iris3.json
great_expectations/expectations/reference/csv/: warning.json
tests/: test_data_quality_playground.py
